<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">""</string>
    <string name="app_name">NewFellow</string>
 	<string name="goAddNew">Add a new contact</string>
 	<string name="goSeeNearest">See who is nearby</string>
 	<string name="request">Request!</string>
 	<string name="gotoAddFriend">Use Manual Name</string>
 	<string name="no">No</string>
 	<string name="yes">Yes</string>
 	<string name="search">Search</string>
 	<string name="askphone">Phone?</string>
 	<string name="askemail">Email?</string>
 	<string name="asktwitter">Twitter?</string>
 	<string name="dbadd">Add to Database</string>
 	<string name="manualAdd">Add</string>
 	<string name="check">Check</string>
 	<string name="Location">Home Base:</string>
 	<string name="save">Save</string>
 	<string name="askBadge">Badge ID?</string>
 	<string name="askName">Name?</string>
 	<string name="filtertext">name or badgeID</string>
</resources>