<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

   	<com.saharmassachi.labs.newfellow.book.LoginButton
        android:id="@+id/login"
        android:src="@drawable/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="30dp"
        />
    
    <Button 
        android:id="@+id/goAddNew"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="goAddNew"
        android:text="@string/goAddNew"
        />
    
    <Button 
        android:id="@+id/goSeeNearest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="goSeeNearest"
        android:text="@string/goSeeNearest"
        />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/maintext"
        />
    
    	<Button android:id="@+id/requestButton"
        android:text="@string/request"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
        android:onClick="requestButton"
        />
    
</LinearLayout>