<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/askemail"
        android:layout_alignParentLeft="true"
        android:text="@string/askemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp" />
    <EditText 
        android:id="@+id/getemail"
        android:layout_toRightOf="@+id/askemail"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        />
    <TextView
        android:id="@+id/asktwitter"
        android:layout_below="@+id/askemail"
        android:layout_alignParentLeft="true"
        android:text="@string/asktwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp" />
    <EditText 
        android:id="@+id/gettwitter"
        android:layout_toRightOf="@+id/asktwitter"
        android:layout_below="@+id/askemail"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        />
    <Button 
        android:id="@+id/friendDbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="DBadd"
            android:text="@string/dbadd"/>
    
</RelativeLayout>